KBV-156: Implemented CredentialIssuerService service
