# lambdas/issuecredential/src/main/java/uk/gov/di/ipv/cri/address/api/handler/IssueCredentialHandler.java
@@ -4,23 +4,28 @@ import com.amazonaws.services.lambda.runtime.Context;
 import com.amazonaws.services.lambda.runtime.RequestHandler;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
 import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyResponseEvent;
-import com.nimbusds.oauth2.sdk.http.HTTPRequest;
 import org.apache.http.HttpStatus;
 import software.amazon.lambda.powertools.logging.CorrelationIdPathConstants;
 import software.amazon.lambda.powertools.logging.Logging;
 import software.amazon.lambda.powertools.metrics.Metrics;
+import uk.gov.di.ipv.cri.address.library.exception.CredentialRequestException;
 import uk.gov.di.ipv.cri.address.library.helpers.ApiGatewayResponseGenerator;
-import uk.gov.di.ipv.cri.address.library.models.CanonicalAddressWithResidency;
+import uk.gov.di.ipv.cri.address.library.service.CredentialIssuerService;
 
-import java.net.URI;
-import java.util.List;
-import java.util.Set;
+import java.util.UUID;
 
 public class IssueCredentialHandler
         implements RequestHandler<APIGatewayProxyRequestEvent, APIGatewayProxyResponseEvent> {
 
-    private static final String ACCESS_TOKEN = "accesstoken";
-    private static final String SUB = "sub";
+    private final CredentialIssuerService addressCredentialIssuerService;
+
+    public IssueCredentialHandler(CredentialIssuerService addressCredentialIssuerService) {
+        this.addressCredentialIssuerService = addressCredentialIssuerService;
+    }
+
+    public IssueCredentialHandler() {
+        this.addressCredentialIssuerService = new CredentialIssuerService();
+    }
 
     @Override
     @Logging(correlationIdPath = CorrelationIdPathConstants.API_GATEWAY_REST)
@@ -28,16 +33,14 @@ public class IssueCredentialHandler
     public APIGatewayProxyResponseEvent handleRequest(
             APIGatewayProxyRequestEvent input, Context context) {
 
-        URI arbitraryUri = URI.create("https://gds");
-        HTTPRequest request = new HTTPRequest(HTTPRequest.Method.POST, arbitraryUri);
-        request.setQuery(input.getBody());
-
-        boolean isValidIssueRequest =
-                request.getQueryParameters().keySet().containsAll(Set.of(ACCESS_TOKEN, SUB));
-
-        int status = isValidIssueRequest ? HttpStatus.SC_OK : HttpStatus.SC_BAD_REQUEST;
-
-        return ApiGatewayResponseGenerator.proxyJsonResponse(
-                status, List.of(new CanonicalAddressWithResidency()));
+        APIGatewayProxyResponseEvent response;
+        try {
+            UUID sessionId = addressCredentialIssuerService.getSessionId(input);
+            var addresses = addressCredentialIssuerService.getAddresses(sessionId);
+            response = ApiGatewayResponseGenerator.proxyJsonResponse(HttpStatus.SC_OK, 1);
+        } catch (CredentialRequestException e) {
+            response = ApiGatewayResponseGenerator.proxyJsonResponse(HttpStatus.SC_BAD_REQUEST, 0);
+        }
+        return response;
     }
 }
